fix: add a bunch of addons

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -16,6 +16,7 @@ Metrics/BlockLength:
   Exclude:
     - "**/spec/**/*"
     - "*.gemspec"
+    - "lib/rails_app_generator/app_generator.rb"
   IgnoredMethods:
     - configure
     - context
