fix: add profile tailwind_hotwire

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,6 +11,7 @@ AllCops:
     - ".builders/**/*"
     - "spec/samples/**/*"
     - "a/**/*"
+    - "after_templates/**/*"
 
 Metrics/BlockLength:
   Exclude:
