fix: add profile tailwind_daisyui, tailwind_hotwire_form

--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
     "semantic-release": "^19.0.3"
+  },
+  "dependencies": {
+    "daisyui": "^2.20.0"
   }
 }
