--- a/docs/last_run/app_generator_data.json
+++ b/docs/last_run/app_generator_data.json
@@ -4,7 +4,7 @@
     "skip_collision_check": false,
     "ruby": "/Users/davidcruwys/.asdf/installs/ruby/2.7.6/bin/ruby",
     "database": "sqlite3",
-    "skip_git": false,
+    "skip_git": true,
     "skip_keeps": false,
     "skip_action_mailer": false,
     "skip_action_mailbox": false,
@@ -31,7 +31,8 @@
     "note": "",
     "test": "rspec",
     "add_devise": false,
-    "add_annotate": true,
+    "add_dotenv": true,
+    "add_annotate": false,
     "add_acts_as_list": false,
     "add_browser": false,
     "add_chartkick": false,
@@ -43,7 +44,6 @@
     "add_mini_magick": false,
     "add_rails_html_sanitizer": false,
     "add_twilio_ruby": false,
-    "template": "/Users/davidcruwys/dev/kgems/rails_app_generator/after_templates/application/printspeak/_.rb",
-    "css": "bootstrap"
+    "template": "/Users/davidcruwys/dev/kgems/rails_app_generator/after_templates/addons/dotenv/_.rb"
   }
 }
