--- a/docs/last_run/app_generator_class.json
+++ b/docs/last_run/app_generator_class.json
@@ -42,6 +42,7 @@
     "test",
     "add_devise",
     "add_dotenv",
+    "add_rubocop",
     "add_annotate",
     "add_acts_as_list",
     "add_browser",
@@ -346,6 +347,13 @@
     {
       "name": "add_dotenv",
       "description": "Indicates when to generate add dotenv",
+      "type": "boolean",
+      "default": false,
+      "required": false
+    },
+    {
+      "name": "add_rubocop",
+      "description": "Indicates when to generate add rubocop",
       "type": "boolean",
       "default": false,
       "required": false
