fix: add lograge addon

--- a/docs/last_run/app_generator_class.json
+++ b/docs/last_run/app_generator_class.json
@@ -44,6 +44,7 @@
     "add_dotenv",
     "add_rubocop",
     "add_annotate",
+    "add_lograge",
     "add_acts_as_list",
     "add_browser",
     "add_chartkick",
@@ -361,6 +362,13 @@
     {
       "name": "add_annotate",
       "description": "Indicates when to generate add annotate",
+      "type": "boolean",
+      "default": false,
+      "required": false
+    },
+    {
+      "name": "add_lograge",
+      "description": "Indicates when to generate add lograge",
       "type": "boolean",
       "default": false,
       "required": false
