--- a/docs/last_run/app_generator_data.json
+++ b/docs/last_run/app_generator_data.json
@@ -34,7 +34,7 @@
     "add_dotenv": false,
     "add_rubocop": false,
     "add_annotate": false,
-    "add_lograge": true,
+    "add_lograge": false,
     "add_acts_as_list": false,
     "add_browser": false,
     "add_chartkick": false,
@@ -44,8 +44,9 @@
     "add_httparty": false,
     "add_honeybadger": false,
     "add_mini_magick": false,
+    "add_public_suffix": true,
     "add_rails_html_sanitizer": false,
     "add_twilio_ruby": false,
-    "template": "/Users/davidcruwys/dev/kgems/rails_app_generator/after_templates/addons/lograge/_.rb"
+    "template": "/Users/davidcruwys/dev/kgems/rails_app_generator/after_templates/addons/public_suffix/_.rb"
   }
 }
