fix: add bcrypt_ruby addon

--- a/docs/last_run/app_generator_class.json
+++ b/docs/last_run/app_generator_class.json
@@ -47,6 +47,7 @@
     "add_lograge",
     "add_acts_as_list",
     "add_browser",
+    "add_bcrypt_ruby",
     "add_chartkick",
     "add_faker",
     "add_groupdate",
@@ -385,6 +386,13 @@
     {
       "name": "add_browser",
       "description": "Indicates when to generate add browser",
+      "type": "boolean",
+      "default": false,
+      "required": false
+    },
+    {
+      "name": "add_bcrypt_ruby",
+      "description": "Indicates when to generate add bcrypt ruby",
       "type": "boolean",
       "default": false,
       "required": false
