fix: add bcrypt_ruby profile

--- a/docs/last_run/app_generator_data.json
+++ b/docs/last_run/app_generator_data.json
@@ -37,6 +37,7 @@
     "add_lograge": false,
     "add_acts_as_list": false,
     "add_browser": false,
+    "add_bcrypt_ruby": true,
     "add_chartkick": false,
     "add_faker": false,
     "add_groupdate": false,
@@ -44,10 +45,10 @@
     "add_httparty": false,
     "add_honeybadger": false,
     "add_mini_magick": false,
-    "add_phony_rails": true,
+    "add_phony_rails": false,
     "add_public_suffix": false,
     "add_rails_html_sanitizer": false,
     "add_twilio_ruby": false,
-    "template": "/Users/davidcruwys/dev/kgems/rails_app_generator/after_templates/addons/phony_rails/_.rb"
+    "template": "/Users/davidcruwys/dev/kgems/rails_app_generator/after_templates/addons/bcrypt_ruby/_.rb"
   }
 }
