--- a/docs/last_run/app_generator_class.json
+++ b/docs/last_run/app_generator_class.json
@@ -46,6 +46,7 @@
     "add_annotate",
     "add_lograge",
     "add_acts_as_list",
+    "add_administrate",
     "add_browser",
     "add_bcrypt_ruby",
     "add_chartkick",
@@ -380,6 +381,13 @@
     {
       "name": "add_acts_as_list",
       "description": "Indicates when to generate add acts as list",
+      "type": "boolean",
+      "default": false,
+      "required": false
+    },
+    {
+      "name": "add_administrate",
+      "description": "Indicates when to generate add administrate",
       "type": "boolean",
       "default": false,
       "required": false
