--- a/docs/last_run/app_generator_data.json
+++ b/docs/last_run/app_generator_data.json
@@ -32,14 +32,15 @@
     "test": "rspec",
     "add_devise": false,
     "add_dotenv": false,
-    "add_rubocop": false,
-    "add_annotate": false,
+    "add_rubocop": true,
+    "add_annotate": true,
     "add_lograge": false,
     "add_acts_as_list": false,
+    "add_administrate": true,
     "add_browser": false,
     "add_bcrypt_ruby": false,
     "add_chartkick": false,
-    "add_faker": false,
+    "add_faker": true,
     "add_groupdate": false,
     "add_hexapdf": false,
     "add_httparty": false,
@@ -48,8 +49,8 @@
     "add_phony_rails": false,
     "add_public_suffix": false,
     "add_rails_html_sanitizer": false,
-    "add_redcarpet": true,
+    "add_redcarpet": false,
     "add_twilio_ruby": false,
-    "template": "/Users/davidcruwys/dev/kgems/rails_app_generator/after_templates/addons/redcarpet/_.rb"
+    "template": "/Users/davidcruwys/dev/kgems/rails_app_generator/after_templates/addons/administrate/_.rb"
   }
 }
