--- a/docs/last_run/app_generator_class.json
+++ b/docs/last_run/app_generator_class.json
@@ -56,6 +56,7 @@
     "add_httparty",
     "add_honeybadger",
     "add_mini_magick",
+    "add_motor_admin",
     "add_phony_rails",
     "add_public_suffix",
     "add_rails_html_sanitizer",
@@ -451,6 +452,13 @@
     {
       "name": "add_mini_magick",
       "description": "Indicates when to generate add mini magick",
+      "type": "boolean",
+      "default": false,
+      "required": false
+    },
+    {
+      "name": "add_motor_admin",
+      "description": "Indicates when to generate add motor admin",
       "type": "boolean",
       "default": false,
       "required": false
