--- a/docs/last_run/app_generator_data.json
+++ b/docs/last_run/app_generator_data.json
@@ -32,15 +32,15 @@
     "test": "rspec",
     "add_devise": false,
     "add_dotenv": false,
-    "add_rubocop": false,
+    "add_rubocop": true,
     "add_annotate": true,
     "add_lograge": false,
-    "add_acts_as_list": true,
-    "add_administrate": false,
+    "add_acts_as_list": false,
+    "add_administrate": true,
     "add_browser": false,
     "add_bcrypt": false,
     "add_chartkick": false,
-    "add_faker": false,
+    "add_faker": true,
     "add_groupdate": false,
     "add_hexapdf": false,
     "add_httparty": false,
@@ -52,6 +52,6 @@
     "add_rails_html_sanitizer": false,
     "add_redcarpet": false,
     "add_twilio_ruby": false,
-    "template": "/Users/davidcruwys/dev/kgems/rails_app_generator/after_templates/addons/acts_as_list/_.rb"
+    "template": "/Users/davidcruwys/dev/kgems/rails_app_generator/after_templates/addons/administrate/_.rb"
   }
 }
