fix: refactor motor-admin, mini_magick and hexapdf profile

--- a/docs/last_run/app_generator_data.json
+++ b/docs/last_run/app_generator_data.json
@@ -32,26 +32,26 @@
     "test": "rspec",
     "add_devise": false,
     "add_dotenv": false,
-    "add_rubocop": false,
-    "add_annotate": false,
+    "add_rubocop": true,
+    "add_annotate": true,
     "add_lograge": false,
     "add_acts_as_list": false,
     "add_administrate": false,
-    "add_browser": true,
+    "add_browser": false,
     "add_bcrypt": false,
     "add_chartkick": false,
-    "add_faker": false,
+    "add_faker": true,
     "add_groupdate": false,
     "add_hexapdf": false,
     "add_httparty": false,
     "add_honeybadger": false,
     "add_mini_magick": false,
-    "add_motor_admin": false,
+    "add_motor_admin": true,
     "add_phony_rails": false,
     "add_public_suffix": false,
     "add_rails_html_sanitizer": false,
     "add_redcarpet": false,
     "add_twilio_ruby": false,
-    "template": "/Users/davidcruwys/dev/kgems/rails_app_generator/after_templates/addons/browser/_.rb"
+    "template": "/Users/davidcruwys/dev/kgems/rails_app_generator/after_templates/addons/motor_admin/_.rb"
   }
 }
