--- a/docs/last_run/app_generator_data.json
+++ b/docs/last_run/app_generator_data.json
@@ -30,16 +30,16 @@
     "skip_bundle": false,
     "note": "",
     "test": "rspec",
-    "add_devise": false,
-    "add_dotenv": false,
     "add_rubocop": false,
-    "add_annotate": true,
     "add_lograge": false,
     "add_acts_as_list": false,
     "add_administrate": false,
-    "add_browser": false,
+    "add_annotate": false,
     "add_bcrypt": false,
+    "add_browser": false,
     "add_chartkick": false,
+    "add_devise": false,
+    "add_dotenv": false,
     "add_faker": false,
     "add_groupdate": false,
     "add_hexapdf": false,
@@ -48,10 +48,10 @@
     "add_mini_magick": false,
     "add_motor_admin": false,
     "add_phony_rails": false,
-    "add_public_suffix": false,
+    "add_public_suffix": true,
     "add_rails_html_sanitizer": false,
     "add_redcarpet": false,
     "add_twilio_ruby": false,
-    "template": "/Users/davidcruwys/dev/kgems/rails_app_generator/after_templates/addons/annotate/_.rb"
+    "template": "/Users/davidcruwys/dev/kgems/rails_app_generator/after_templates/addons/public_suffix/_.rb"
   }
 }
