--- a/docs/last_run/app_generator_data.json
+++ b/docs/last_run/app_generator_data.json
@@ -30,28 +30,29 @@
     "skip_bundle": false,
     "note": "",
     "test": "rspec",
-    "add_rubocop": false,
-    "add_lograge": false,
     "add_acts_as_list": false,
-    "add_administrate": false,
-    "add_annotate": false,
+    "add_administrate": true,
+    "add_annotate": true,
+    "add_avo": false,
     "add_bcrypt": false,
     "add_browser": false,
     "add_chartkick": false,
     "add_devise": false,
     "add_dotenv": false,
-    "add_faker": false,
+    "add_faker": true,
     "add_groupdate": false,
     "add_hexapdf": false,
     "add_httparty": false,
     "add_honeybadger": false,
+    "add_lograge": false,
     "add_mini_magick": false,
     "add_motor_admin": false,
+    "add_public_suffix": false,
     "add_phony_rails": false,
-    "add_public_suffix": true,
     "add_rails_html_sanitizer": false,
     "add_redcarpet": false,
+    "add_rubocop": true,
     "add_twilio_ruby": false,
-    "template": "/Users/davidcruwys/dev/kgems/rails_app_generator/after_templates/addons/public_suffix/_.rb"
+    "template": "/Users/davidcruwys/dev/kgems/rails_app_generator/after_templates/addons/administrate/_.rb"
   }
 }
