--- a/docs/last_run/app_generator_class.json
+++ b/docs/last_run/app_generator_class.json
@@ -55,6 +55,8 @@
     "add_httparty",
     "add_honeybadger",
     "add_lograge",
+    "add_minimal_css",
+    "minimal_css_library",
     "add_mini_magick",
     "add_motor_admin",
     "add_public_suffix",
@@ -448,6 +450,20 @@
       "description": "Indicates when to generate add lograge",
       "type": "boolean",
       "default": false,
+      "required": false
+    },
+    {
+      "name": "add_minimal_css",
+      "description": "Indicates when to generate add minimal css",
+      "type": "boolean",
+      "default": false,
+      "required": false
+    },
+    {
+      "name": "minimal_css_library",
+      "description": "Indicates when to generate minimal css library",
+      "type": "string",
+      "default": "water.css",
       "required": false
     },
     {
