--- a/docs/last_run/app_generator_data.json
+++ b/docs/last_run/app_generator_data.json
@@ -28,11 +28,11 @@
     "api": false,
     "javascript": "importmap",
     "skip_bundle": false,
-    "note": "",
+    "note": "\"minimal_css_library is optional and will default to water if not specified.\"",
     "test": "rspec",
     "add_acts_as_list": false,
-    "add_administrate": true,
-    "add_annotate": true,
+    "add_administrate": false,
+    "add_annotate": false,
     "add_avo": false,
     "add_bcrypt": false,
     "add_browser": false,
@@ -45,14 +45,16 @@
     "add_httparty": false,
     "add_honeybadger": false,
     "add_lograge": false,
+    "add_minimal_css": true,
+    "minimal_css_library": "water",
     "add_mini_magick": false,
     "add_motor_admin": false,
     "add_public_suffix": false,
     "add_phony_rails": false,
     "add_rails_html_sanitizer": false,
     "add_redcarpet": false,
-    "add_rubocop": true,
+    "add_rubocop": false,
     "add_twilio_ruby": false,
-    "template": "/Users/davidcruwys/dev/kgems/rails_app_generator/after_templates/addons/administrate/_.rb"
+    "template": "/Users/davidcruwys/dev/kgems/rails_app_generator/after_templates/addons/minimal_css/_.rb"
   }
 }
