fix: add devise_masquerade profile

--- a/docs/last_run/app_generator_data.json
+++ b/docs/last_run/app_generator_data.json
@@ -2,7 +2,7 @@
   "options": {
     "skip_namespace": false,
     "skip_collision_check": false,
-    "ruby": "/Users/davidcruwys/.asdf/installs/ruby/3.1.1/bin/ruby",
+    "ruby": "/Users/davidcruwys/.asdf/installs/ruby/2.7.6/bin/ruby",
     "database": "sqlite3",
     "skip_git": true,
     "skip_keeps": false,
@@ -26,27 +26,28 @@
     "main": false,
     "no_rc": false,
     "api": false,
-    "javascript": "importmap",
+    "javascript": "esbuild",
     "skip_bundle": false,
-    "note": "\"minimal_css_library is optional and will default to water if not specified.\"",
+    "note": "",
     "test": "rspec",
     "add_acts_as_list": false,
     "add_administrate": false,
-    "add_annotate": false,
+    "add_annotate": true,
     "add_avo": false,
     "add_bcrypt": false,
     "add_browser": false,
     "add_chartkick": false,
-    "add_devise": false,
+    "add_devise": true,
+    "add_devise_masquerade": true,
     "add_dotenv": false,
-    "add_faker": true,
+    "add_faker": false,
     "add_groupdate": false,
     "add_hexapdf": false,
     "add_httparty": false,
     "add_honeybadger": false,
     "add_lograge": false,
     "add_minimal_css": true,
-    "minimal_css_library": "water",
+    "minimal_css_library": "water.css",
     "add_mini_magick": false,
     "add_motor_admin": false,
     "add_public_suffix": false,
@@ -55,6 +56,6 @@
     "add_redcarpet": false,
     "add_rubocop": false,
     "add_twilio_ruby": false,
-    "template": "/Users/davidcruwys/dev/kgems/rails_app_generator/after_templates/addons/minimal_css/_.rb"
+    "template": "/Users/davidcruwys/dev/kgems/rails_app_generator/after_templates/addons/devise_masquerade/_.rb"
   }
 }
