--- a/docs/last_run/app_generator_class.json
+++ b/docs/last_run/app_generator_class.json
@@ -48,6 +48,7 @@
     "add_browser",
     "add_chartkick",
     "add_devise",
+    "add_devise_masquerade",
     "add_dotenv",
     "add_faker",
     "add_groupdate",
@@ -113,7 +114,7 @@
       "name": "ruby",
       "description": "Path to the Ruby binary of your choice",
       "type": "string",
-      "default": "/Users/davidcruwys/.asdf/installs/ruby/3.1.1/bin/ruby",
+      "default": "/Users/davidcruwys/.asdf/installs/ruby/2.7.6/bin/ruby",
       "required": false
     },
     {
@@ -399,6 +400,13 @@
     {
       "name": "add_devise",
       "description": "Indicates when to generate add devise",
+      "type": "boolean",
+      "default": false,
+      "required": false
+    },
+    {
+      "name": "add_devise_masquerade",
+      "description": "Indicates when to generate add devise masquerade",
       "type": "boolean",
       "default": false,
       "required": false
