--- a/docs/last_run/app_generator_data.json
+++ b/docs/last_run/app_generator_data.json
@@ -26,21 +26,22 @@
     "main": false,
     "no_rc": false,
     "api": false,
-    "javascript": "esbuild",
+    "javascript": "importmap",
     "skip_bundle": false,
     "note": "",
     "test": "rspec",
     "add_acts_as_list": false,
     "add_administrate": false,
-    "add_annotate": true,
+    "add_annotate": false,
     "add_avo": false,
     "add_bcrypt": false,
+    "add_brakeman": true,
     "add_browser": false,
     "add_chartkick": false,
-    "add_devise": true,
+    "add_devise": false,
     "add_devise_masquerade": false,
     "add_dotenv": false,
-    "add_faker": true,
+    "add_faker": false,
     "add_groupdate": false,
     "add_hexapdf": false,
     "add_httparty": false,
@@ -55,9 +56,9 @@
     "add_public_suffix": false,
     "add_rails_html_sanitizer": false,
     "add_redcarpet": false,
-    "add_rolify": true,
+    "add_rolify": false,
     "add_rubocop": false,
     "add_twilio_ruby": false,
-    "template": "/Users/davidcruwys/dev/kgems/rails_app_generator/after_templates/addons/rolify/_.rb"
+    "template": "/Users/davidcruwys/dev/kgems/rails_app_generator/after_templates/addons/brakeman/_.rb"
   }
 }
