--- a/docs/last_run/app_generator_data.json
+++ b/docs/last_run/app_generator_data.json
@@ -32,14 +32,14 @@
     "test": "rspec",
     "add_acts_as_list": false,
     "add_administrate": false,
-    "add_annotate": false,
-    "add_avo": false,
+    "add_annotate": true,
+    "add_avo": true,
     "add_bcrypt": false,
     "add_brakeman": false,
     "add_browser": false,
     "add_bundler_audit": false,
     "add_chartkick": false,
-    "add_devise": false,
+    "add_devise": true,
     "add_devise_masquerade": false,
     "add_dotenv": false,
     "add_faker": true,
@@ -47,7 +47,7 @@
     "add_hexapdf": false,
     "add_httparty": false,
     "add_honeybadger": false,
-    "add_kaminari": true,
+    "add_kaminari": false,
     "add_lograge": false,
     "add_minimal_css": true,
     "minimal_css_library": "water.css",
@@ -59,8 +59,8 @@
     "add_rails_html_sanitizer": false,
     "add_redcarpet": false,
     "add_rolify": false,
-    "add_rubocop": false,
+    "add_rubocop": true,
     "add_twilio_ruby": false,
-    "template": "/Users/davidcruwys/dev/kgems/rails_app_generator/after_templates/addons/kaminari/_.rb"
+    "template": "/Users/davidcruwys/dev/kgems/rails_app_generator/after_templates/addons/avo/_.rb"
   }
 }
