--- a/docs/last_run/app_generator_data.json
+++ b/docs/last_run/app_generator_data.json
@@ -2,7 +2,7 @@
   "options": {
     "skip_namespace": false,
     "skip_collision_check": false,
-    "ruby": "/Users/davidcruwys/.asdf/installs/ruby/2.7.6/bin/ruby",
+    "ruby": "/Users/davidcruwys/.asdf/installs/ruby/3.1.1/bin/ruby",
     "database": "sqlite3",
     "skip_git": true,
     "skip_keeps": false,
@@ -47,6 +47,7 @@
     "add_hexapdf": false,
     "add_httparty": false,
     "add_honeybadger": false,
+    "add_image_processing": true,
     "add_kaminari": false,
     "add_lograge": false,
     "add_minimal_css": true,
@@ -57,6 +58,7 @@
     "add_pretender": false,
     "add_public_suffix": false,
     "add_rails_html_sanitizer": false,
+    "add_ransack": true,
     "add_redcarpet": false,
     "add_rolify": false,
     "add_rubocop": true,
