--- a/docs/last_run/app_generator_data.json
+++ b/docs/last_run/app_generator_data.json
@@ -32,23 +32,24 @@
     "test": "rspec",
     "add_acts_as_list": false,
     "add_administrate": false,
-    "add_annotate": true,
-    "add_avo": true,
+    "add_annotate": false,
+    "add_avo": false,
     "add_bcrypt": false,
     "add_brakeman": false,
     "add_browser": false,
     "add_bundler_audit": false,
     "add_chartkick": false,
-    "add_devise": true,
+    "add_devise": false,
     "add_devise_masquerade": false,
     "add_dotenv": false,
+    "add_factory_bot_rails": true,
     "add_faker": true,
     "add_friendly_id": false,
     "add_groupdate": false,
     "add_hexapdf": false,
     "add_httparty": false,
     "add_honeybadger": false,
-    "add_image_processing": true,
+    "add_image_processing": false,
     "add_kaminari": false,
     "add_lograge": false,
     "add_minimal_css": true,
@@ -59,11 +60,11 @@
     "add_pretender": false,
     "add_public_suffix": false,
     "add_rails_html_sanitizer": false,
-    "add_ransack": true,
+    "add_ransack": false,
     "add_redcarpet": false,
     "add_rolify": false,
-    "add_rubocop": true,
+    "add_rubocop": false,
     "add_twilio_ruby": false,
-    "template": "/Users/davidcruwys/dev/kgems/rails_app_generator/after_templates/addons/avo/_.rb"
+    "template": "/Users/davidcruwys/dev/kgems/rails_app_generator/after_templates/addons/factory_bot_rails/_.rb"
   }
 }
