--- a/docs/last_run/app_generator_class.json
+++ b/docs/last_run/app_generator_class.json
@@ -70,6 +70,7 @@
     "add_pretender",
     "add_public_suffix",
     "add_rails_html_sanitizer",
+    "add_scenic",
     "add_ransack",
     "add_redcarpet",
     "add_rolify",
@@ -563,6 +564,13 @@
     {
       "name": "add_rails_html_sanitizer",
       "description": "Indicates when to generate add rails html sanitizer",
+      "type": "boolean",
+      "default": false,
+      "required": false
+    },
+    {
+      "name": "add_scenic",
+      "description": "Indicates when to generate add scenic",
       "type": "boolean",
       "default": false,
       "required": false
