fix: add scenic profile

--- a/docs/last_run/app_generator_data.json
+++ b/docs/last_run/app_generator_data.json
@@ -4,7 +4,7 @@
     "skip_collision_check": false,
     "ruby": "/Users/davidcruwys/.asdf/installs/ruby/3.1.1/bin/ruby",
     "database": "postgresql",
-    "skip_git": false,
+    "skip_git": true,
     "skip_keeps": false,
     "skip_action_mailer": false,
     "skip_action_mailbox": false,
@@ -32,18 +32,18 @@
     "test": "rspec",
     "add_acts_as_list": false,
     "add_administrate": false,
-    "add_annotate": true,
-    "add_avo": true,
+    "add_annotate": false,
+    "add_avo": false,
     "add_bcrypt": false,
-    "add_brakeman": true,
+    "add_brakeman": false,
     "add_browser": false,
-    "add_bundler_audit": true,
+    "add_bundler_audit": false,
     "add_chartkick": false,
-    "add_devise": true,
+    "add_devise": false,
     "add_devise_masquerade": false,
-    "add_dotenv": true,
-    "add_factory_bot_rails": true,
-    "add_faker": true,
+    "add_dotenv": false,
+    "add_factory_bot_rails": false,
+    "add_faker": false,
     "add_friendly_id": false,
     "add_groupdate": false,
     "add_hexapdf": false,
@@ -52,7 +52,7 @@
     "add_image_processing": false,
     "add_kaminari": false,
     "add_lograge": false,
-    "add_minimal_css": false,
+    "add_minimal_css": true,
     "minimal_css_library": "water.css",
     "add_mini_magick": false,
     "add_motor_admin": false,
@@ -60,12 +60,12 @@
     "add_pretender": false,
     "add_public_suffix": false,
     "add_rails_html_sanitizer": false,
+    "add_scenic": true,
     "add_ransack": false,
     "add_redcarpet": false,
     "add_rolify": false,
-    "add_rubocop": true,
+    "add_rubocop": false,
     "add_twilio_ruby": false,
-    "template": "/Users/davidcruwys/dev/kgems/rails_app_generator/after_templates/application/klueless/_.rb",
-    "css": "tailwind"
+    "template": "/Users/davidcruwys/dev/kgems/rails_app_generator/after_templates/addons/scenic/_.rb"
   }
 }
