update klueless profile

--- a/docs/last_run/app_generator_data.json
+++ b/docs/last_run/app_generator_data.json
@@ -50,8 +50,8 @@
     "add_httparty": false,
     "add_honeybadger": false,
     "add_image_processing": false,
-    "add_kaminari": false,
-    "add_lograge": false,
+    "add_kaminari": true,
+    "add_lograge": true,
     "add_minimal_css": false,
     "minimal_css_library": "water.css",
     "add_mini_magick": false,
@@ -61,7 +61,7 @@
     "add_public_suffix": false,
     "add_rails_html_sanitizer": false,
     "add_scenic": true,
-    "add_ransack": false,
+    "add_ransack": true,
     "add_redcarpet": false,
     "add_rolify": false,
     "add_rubocop": true,
