--- a/docs/last_run/app_generator_class.json
+++ b/docs/last_run/app_generator_class.json
@@ -70,10 +70,11 @@
     "add_pretender",
     "add_public_suffix",
     "add_rails_html_sanitizer",
-    "add_scenic",
     "add_ransack",
     "add_redcarpet",
     "add_rolify",
+    "add_scenic",
+    "add_rspec",
     "add_rubocop",
     "add_twilio_ruby"
   ],
@@ -569,13 +570,6 @@
       "required": false
     },
     {
-      "name": "add_scenic",
-      "description": "Indicates when to generate add scenic",
-      "type": "boolean",
-      "default": false,
-      "required": false
-    },
-    {
       "name": "add_ransack",
       "description": "Indicates when to generate add ransack",
       "type": "boolean",
@@ -592,6 +586,20 @@
     {
       "name": "add_rolify",
       "description": "Indicates when to generate add rolify",
+      "type": "boolean",
+      "default": false,
+      "required": false
+    },
+    {
+      "name": "add_scenic",
+      "description": "Indicates when to generate add scenic",
+      "type": "boolean",
+      "default": false,
+      "required": false
+    },
+    {
+      "name": "add_rspec",
+      "description": "Indicates when to generate add rspec",
       "type": "boolean",
       "default": false,
       "required": false
